fix accessibilty problem and update readme

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
 </head>
 <body>
-  <main role="main">
-    <section role="contentinfo" id="grid-container">
+  <main>
+    <section id="grid-container">
 
       <div class="card-vehicle sedan">
         <img src="./images/icon-sedans.svg" alt="sedan car icon" >
